# WR3CK-Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/WR3CK/: WR3CK.hpp
include/WR3CK/application/: application.hpp  application.ipp  input.hpp  time.hpp  window.hpp
include/WR3CK/asset/: asset.hpp  assetBaseData.hpp  assetData.hpp  assetHandle.hpp  frameBuffer.hpp  mesh.hpp  mesh.ipp  plaintext.hpp  renderTexture.hpp  shader.hpp  shaderAttributeInformation.hpp  shaderUniformInformation.hpp  texture.hpp
include/WR3CK/core/: core.hpp  entry.hpp  error.hpp  macros.hpp  opengl.hpp
include/WR3CK/file/: assetLoader.hpp  assetPackage.hpp
include/WR3CK/math/: color.hpp  functions.hpp  math.hpp  matrix.hpp  matrix.ipp  matrix4.hpp  vector.hpp  vector.ipp  vectorn.hpp
include/WR3CK/renderer/: renderData.hpp  renderGroup.hpp  renderInstance.hpp  renderInstance.ipp  renderUniformBuffer.hpp  renderer.hpp  staticRenderInstance.hpp  staticRenderObject.hpp
include/WR3CK/utility/: handle.hpp  handle.ipp  utility.hpp
internal/asset-packager/: CMakeLists.txt  asset_files.in
internal/asset-packager/source/: fileData.cpp  fileData.hpp  main.cpp  packager.cpp  packager.hpp
source/application/: application.cpp  input.cpp  time.cpp  window.cpp
source/asset/: frameBuffer.cpp  mesh.cpp  plaintext.cpp  renderTexture.cpp  shader.cpp  texture.cpp
source/core/: entry.cpp  error.cpp  opengl.cpp
source/file/: assetLoader.cpp
source/math/: color.cpp  functions.cpp  matrix4.cpp  matrix4.hpp
source/renderer/: renderData.cpp  renderGroup.cpp  renderInstance.cpp  renderUniformBuffer.cpp  renderer.cpp  staticRenderObject.cpp
